--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -38,7 +38,8 @@
 
   // Automatically collapse sidebar on smaller screens
   if (window.innerWidth <= 768) {
-    sidebar.classList.add('collapsed');
+    //sidebar.classList.add('collapsed');
+    sidebar.classList.add('hide');
   }
 
   // Handle window resizing (optional)
