--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -19,6 +19,11 @@
   transform: translateX(-100%);
 }
 
+.sidebar.hide {
+ transform: translateX(-100%);
+  transition: transform 0s;
+}
+
 .sidebar-content {
   flex: 1;
   overflow-y: auto;
