--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -38,8 +38,7 @@
 
   // Automatically collapse sidebar on smaller screens
   if (window.innerWidth <= 768) {
-    //sidebar.classList.add('collapsed');
-    sidebar.classList.add('hide');
+    sidebar.classList.add('collapsed');
   }
 
   // Handle window resizing (optional)
