--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -13,11 +13,10 @@
   flex-direction: column;
   z-index: 1000;
   transition: transform 0.3s ease;
-  transition: transform 0s;
 }
 
 .sidebar.collapsed {
-  transform: translateX(-100%);
+  width: 0px;
 }
 
 .sidebar-content {
