--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -12,7 +12,6 @@
   display: flex;
   flex-direction: column;
   z-index: 1000;
-  transition: width 0.3s ease; /* Transition for width */
 }
 
 .sidebar.collapsed {
@@ -22,52 +21,52 @@
 /* Hide content when collapsed on small screens */
 @media (max-width: 768px) {
   .sidebar-content {
-    visibility: hidden; /* Hide content */
     opacity: 0; /* Make it invisible */
-    transition: visibility 0s, opacity 0.3s ease; /* Smooth transition */
+    transition: opacity .3s ease; /* Smooth transition */
     height: auto; /* Allow height to collapse */
     overflow: hidden; /* Prevent overflow */
+    visibility: hidden; /* Hide content */
   }
 
-  .sidebar:not(.collapsed) .sidebar-content {
-    visibility: visible; /* Show content when not collapsed */
-    opacity: 1; /* Make it visible */
-    transition: visibility 0s, opacity 0.3s ease; /* Smooth transition */
-    height: auto; /* Allow height to expand */
-    overflow: visible; /* Allow overflow */
-  }
+   .sidebar:not(.collapsed) .sidebar-content {
+     opacity: 1; /* Make it visible */
+     transition: opacity .3s ease; /* Smooth transition */
+     height: auto; /* Allow height to expand */
+     overflow: visible; /* Allow overflow */
+     visibility: visible; /* Show content when not collapsed */
+   }
 }
 
 .sidebar-content {
-  flex: 1;
-  overflow-y: auto;
-  padding: 20px;
+   flex:1;
+   overflow-y:auto;
+   padding:20px;
 }
 
 .sidebar-content ul {
-  list-style: none;
-  padding: 0;
+   list-style:none;
+   padding:0;
 }
 
 .sidebar-content ul li {
-  margin: 15px 0;
+   margin:15px 0;
 }
 
 .sidebar-content ul li a {
-  color: #ffffff;
-  text-decoration: none;
-  font-size: 18px;
-  transition: color 0.3s ease;
+   color:#ffffff;
+   text-decoration:none;
+   font-size:18px;
+   transition:color .3s ease;
 }
 
 .sidebar-content ul li a:hover {
-   color: #ff6347; /* Highlight color */
+   color:#ff6347; /* Highlight color */
 }
 
 /* Submenu styles */
 .submenu {
-   display: none;
-   margin-left: 20px;
+   display:none;
+   margin-left:20px;
    padding-left:10px;
    border-left:2px solid #ffffff33;
 }
@@ -80,7 +79,7 @@
 .submenu-indicator {
    font-size:14px;
    color:#ffffff;
-   transition: transform .3s ease;
+   transition:transform .3s ease;
 }
 
 .submenu-indicator.rotated {
