--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,14 @@ font-family: 'Nunito', sans-serif;
 font-size: 18px;
 }
 
+img {
+display: block;
+width: 100%;
+max-width: 500px;
+margin-left: auto;
+margin-right: auto;
+}
+
 figcaption {
 margin-top: 5px;
 text-align: center;
