--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -37,20 +37,36 @@
 <meta name="twitter:description" content="{{ .Summary }}" />
 <meta name="twitter:image" content="{{ .Params.image | absURL }}" />
 
+<!--
+{{ template "_internal/twitter_cards.html" . }}
+-->
 </head>
 
 <body>
 
 <header>
-
+{{ $headerPartial := printf "partials/%s/header.html" .Section }}
+{{ if templates.Exists $headerPartial }}
+	{{ partial $headerPartial . }}
+{{ else }}
+	{{ partial "header.html" . }}
+{{ end }}
 </header>
 
 <main>
+{{ $navPartial := printf "partials/%s/nav.html" .Section }}
+{{ if templates.Exists $navPartial }}
+	{{ partial $navPartial . }}
+{{ else }}
+	{{ partial "nav.html" . }}
+{{ end }}
 
 {{ block "main" . }}
 <!-- This will be replaced by content from other templates -->
 {{ end }}
 </main>
+
+{{ partial "sidebar.html" . }}
 
 <footer>
 {{ $footerPartial := printf "partials/%s/footer.html" .Lang }}
