--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,9 @@
 body {
 max-width: 800px;
 margin: auto;
-padding: 70px 10px 0px 10px;
-background-color: rgb(10,10,10);
+padding: 10px;
+background-color: rgb(20,20,20);
+background-color: black;
 color: white;
 line-height: 1.3;
 font-family: 'Nunito', sans-serif;
@@ -18,10 +19,8 @@ max-width: 500px;
 margin-left: auto;
 margin-right: auto;
 }
-
-figcaption {
-margin-top: 5px;
-text-align: center;
+.banner img {
+   max-width: 100%;
 }
    
 tr,td {
