--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,1 +1,7 @@
-Extra Ecclesiam Nulla Salus
+<span class="header-title">Extra Ecclesiam Nulla Salus<span> 
+
+<a href="/">Accueil</a>
+<a href="/bible">Accueil</a>
+<a href="/doctrine">Doctrie</a>
+<a href="/apologetique">Apologétique</a>
+<a href="/spiritualite">Spiritualité</a>
