--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -50,6 +50,8 @@
 {{ end }}
 </header>
 
+{{ partial "navbar.html" . }}
+
 <main>
 {{ $navPartial := printf "partials/%s/nav.html" .Section }}
 {{ if templates.Exists $navPartial }}
