--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -2,7 +2,7 @@
 .navbar {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: end;
   color: #ddd;
 }
 .navbar .logo {
