--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.bunny.net/css?family=nunito:300,400,600,700');
 
 body {
-padding: 10px;
-background-color: rgb(20,20,20);
-background-color: black;
+max-width: 800px;
+margin: auto;
+padding: 70px 10px 0px 10px;
+background-color: rgb(10,10,10);
 color: white;
 line-height: 1.3;
 font-family: 'Nunito', sans-serif;
@@ -17,8 +18,10 @@ max-width: 500px;
 margin-left: auto;
 margin-right: auto;
 }
-.banner img {
-   max-width: 100%;
+
+figcaption {
+margin-top: 5px;
+text-align: center;
 }
    
 tr,td {
@@ -35,9 +38,7 @@ text-decoration: underline;
 }
 
 main {
-max-width: 800px;
 min-height: 500px;
-margin: auto;
 }
 
 footer {
