--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,5 +1,14 @@
-
 <nav class="navbar">
+
+<div class="logo">
+<a href="https://eens.netlify.app">
+(&tau;) Extra Ecclesiam Nulla Salus
+</a>
+</div>
+
+<div class="banner">
+<img src="/images/banner.png"/>
+</div>
 
   <div class="hamburger">
     <div class="line"></div>
