--- a/layouts/partials/postnav.html
+++ b/layouts/partials/postnav.html
@@ -1,22 +1,12 @@
-<nav class="breadcrumb">
-<ol>
 
-{{ $url := .RelPermalink }}
-{{ $urlParts := split $url "/" }}
-
-{{ range $index, $element := $urlParts }}
-   {{ if ne $element "" }}
-      <a href="{{ delimit (first (add $index 1) $urlParts) "/" }}/">
-      <li>
-      {{ if eq $element $.Site.Language.Lang }}
-         {{ i18n "home" }}
-      {{ else }}
-         {{ humanize $element }}
-      {{ end }}
-      </a>
-      </li>
-   {{ end }}
-{{ end }}
-
-</ol>
-</nav>
+<nav class="breadcrumb" aria-label="Breadcrumb">
+    <ul class="breadcrumb-list">
+        {{ $path := .Permalink }}
+        {{ $segments := .Sections }}
+        
+        {{ range $index, $section := $segments }}
+        <li class="breadcrumb-item">
+            <a href="{{ $.Site.BaseURL | relURL }}{{ index $segments $index | urlize }}/" 
+               class="{{ if eq $section .Title }}current{{ end }}">{{ $section }}</a>
+        </li> 
+        
