--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -6,15 +6,29 @@
   align-items: center;
   color: #ddd;
 }
+.navbar .logo {
+   margin-bottom: 10px;
+}
+.navbar .logo a {
+   font-size: 20px;
+   font-weight: bold;
+}
+.navbar .logo a:hover {
+   text-decoration: none;
+}
+
+.logo img {
+  width: 100%;
+}
 
 .nav-links {
   display: flex;
   list-style: none;
   padding-left: 0px;
-  margin: 10px 0px 0px 0px;
+   margin: 0px;
 }
 
-.nav-links li:not(:first-child) {
+.nav-links li {
   margin-left: 1.5rem;
   position: relative; /* Required for dropdown positioning */
 }
@@ -22,6 +36,7 @@
 .nav-links a {
   color: #ddd;
   text-decoration: none;
+  font-size: 1.1rem;
   padding: 7px 0; /* Uniform padding for menu items */
   display: block;
   width: 100%;
@@ -46,26 +61,25 @@
 .dropdown-menu {
   display: none;
   position: absolute;
-  top: 100%; /* Ensure the submenu starts directly below the parent */
-  left: 0; /* Align submenu with the parent menu item */
-  background-color: rgb(20, 20, 20);
+  top: 100%;
+  left: 0;
+  background-color: rgb(20,20,20);
   list-style: none;
   z-index: 1000;
-  padding: 10px 0; /* Adjust padding for proper spacing */
-  min-width: 200px; /* Set a consistent width for submenus */
+  padding: 10px 20px 0px 0px;
 }
 
 .dropdown-menu li {
-  padding: 0;
+  padding: 0px 0px 0px 0px;
 }
 
 .dropdown-menu a {
   color: #ddd;
   text-decoration: none;
   display: block;
-  text-align: left; /* Left-align submenu text */
+  text-align: left; /* Left align submenu text */
   transition: color 0.3s ease-in-out, text-decoration 0.3s ease-in-out;
-  padding: 10px 20px; /* Adjust padding for spacing */
+  padding: 0px 0px 0px 0px;
 }
 
 .dropdown-menu a:hover {
@@ -87,7 +101,6 @@
   margin: 4px 0;
 }
 
-/* Responsive Design for Mobile */
 @media (max-width: 800px) {
   .navbar {
     align-items: flex-start; /* Align items left */
@@ -128,9 +141,8 @@
     position: static;
     display: none;
     flex-direction: column;
-    padding: 0;
-    margin-left: 0; /* Align submenus left for mobile */
-    width: 100%; /* Full-width dropdown for mobile */
+    padding: 0; /* Remove extra padding */
+    margin-left: 0; /* Left aligned submenus */
   }
 
   .dropdown:hover .dropdown-menu {
@@ -147,8 +159,8 @@
 }
 
 /* Large Screen - Reduced Space Between Submenus */
-@media (min-width: 800px) {
+@media (min-width: 801px) {
   .dropdown-menu a {
-    padding: 10px 20px; /* Consistent padding for desktop submenus */
+    padding: 0px 0px 10px 0px; /* Reduced padding between submenu items */
   }
 }
