--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -10,10 +10,10 @@
   display: flex;
   list-style: none;
   padding-left: 0px;
-   margin: 0px;
+  margin: 30px 0px 0px 0px;
 }
 
-.nav-links li {
+.nav-links li:not(:first-child) {
   margin-left: 1.5rem;
   position: relative; /* Required for dropdown positioning */
 }
