--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -15,8 +15,12 @@
 
 .nav-links li:not(:first-child) {
   margin-left: 1.5rem;
-  position: relative; /* Required for dropdown positioning */
-}
+  position: relative; /* required for dropdown positioning */
+} 
+.nav-links li li {
+  margin-left: 1.5rem;
+  position: relative; /* required for dropdown positioning */
+} 
 
 .nav-links a {
   color: #ddd;
