--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,11 +1,15 @@
-<header>
   <div class="container">
     <div class="header-content">
       <div class="site-title">
         <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
       </div>
       <nav>
-        <ul>
+        <div class="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <ul class="nav-menu">
           {{ range .Site.Menus.main }}
             <li><a href="{{ .URL }}">{{ .Name }}</a></li>
           {{ end }}
@@ -13,4 +17,3 @@
       </nav>
     </div>
   </div>
-</header>
