--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -14,7 +14,7 @@
   font-size: 1.5rem;
   font-weight: bold;
   text-decoration: none;
-  color: var(--text-color);
+  color: white;
 }
 
 nav ul {
@@ -30,11 +30,11 @@ nav ul li {
 
 nav ul li a {
   text-decoration: none;
-  color: var(--text-color);
+  color: white;
 }
 
 nav ul li a:hover {
-  color: var(--accent-color);
+  color: white;
 }
 
 .hamburger {
