--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.bunny.net/css?family=nunito:300,400,600,700');
 
 body {
+padding: 0px 0px 0px 0px;
 background-color: black;
 color: white;
 line-height: 1.3;
