--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -63,30 +63,26 @@ nav ul li a:hover {
 }
 
 @media screen and (max-width: 768px) {
-  .hamburger {
-    display: flex;
-  }
-
   .nav-menu {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
+    position: fixed;
+    top: 60px; /* Adjust this value to match your header height */
     left: 0;
     width: 100%;
     background-color: #2c2c2c;
     padding: 1rem 0;
+    transform: translateY(-100%);
+    transition: transform 0.3s ease-in-out;
   }
 
   .nav-menu.active {
-    display: flex;
+    transform: translateY(0);
   }
 
-  nav ul li {
-    margin: 0.5rem 0;
+  main {
+    transition: transform 0.3s ease-in-out;
   }
 
-  .site-title {
-   margin: auto;
+  .menu-open main {
+    transform: translateY(100%); /* Push main content down when menu is open */
   }
 }
