--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,4 @@
+
 <div class="container">
  <div class="header-content">
    <div class="site-title">
@@ -16,4 +17,8 @@
      </ul>
    </nav>
  </div>
+</div>
+<!-- Add main content container -->
+<div class="main-content">
+  {{ .Content }}
 </div>
