--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -70,8 +70,6 @@ nav ul li a:hover {
   .nav-menu {
     display: none;
     flex-direction: column;
-    top: 60px;
-    left: 0;
     width: 100%;
     background-color: #2c2c2c;
     padding: 1rem 0;
@@ -81,11 +79,20 @@ nav ul li a:hover {
     display: flex;
   }
 
+  nav {
+    position: relative;
+  }
+
   nav ul li {
     margin: 0.5rem 0;
   }
 
   .site-title {
-   margin: auto;
+    margin: auto;
+  }
+
+  /* Add this to push content down */
+  .content {
+    margin-top: 60px; /* Adjust this value based on your header height */
   }
 }
