--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -67,19 +67,12 @@ nav ul li a:hover {
     display: flex;
   }
 
-  nav {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .site-title {
-    margin-bottom: 1rem;
-  }
-
   .nav-menu {
     display: none;
     flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
     width: 100%;
     background-color: #2c2c2c;
     padding: 1rem 0;
@@ -91,6 +84,9 @@ nav ul li a:hover {
 
   nav ul li {
     margin: 0.5rem 0;
-    text-align: center;
+  }
+
+  .site-title {
+   margin: auto;
   }
 }
