--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -70,7 +70,7 @@ nav ul li a:hover {
   .nav-menu {
     display: none;
     flex-direction: column;
-    position: relative;
+    position: absolute;
     top: 60px;
     left: 0;
     width: 100%;
