--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,4 +61,7 @@ margin: 17px 15px 17px 15px;
    blockquote {
    margin: 17px 7px 17px 7px;
    }
+   main {
+   padding: 0px 10px 0px 10px;
+   }
 }
