--- a/assets/css/postnav.css
+++ b/assets/css/postnav.css
@@ -1,7 +1,4 @@
 .breadcrumb {
-  background-color: rgb(30,30,30);
-  padding: 10px 20px;
-  border-radius: 5px;
    margin: 20px 0px 0px 0px;
 }
 
@@ -21,21 +18,18 @@
 .breadcrumb li:not(:last-child)::after {
   content: "/";
   margin: 0 10px;
-  color: #666;
+  color: red;
 }
 
 .breadcrumb a {
-  color: #b3b3b3;
+  color: white;
   text-decoration: none;
-  transition: color 0.3s ease;
 }
 
 .breadcrumb a:hover {
-  color: #ffffff;
   text-decoration: underline;
 }
 
 .breadcrumb li:last-child a {
-  color: #4a90e2;
   pointer-events: none;
 }
