--- a/assets/css/postnav.css
+++ b/assets/css/postnav.css
@@ -1,35 +1,12 @@
-.breadcrumb {
-   margin: 20px 0px 0px 0px;
-}
 
-.breadcrumb ol {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.breadcrumb li {
-  display: inline;
-  font-size: 16px;
-}
-
-.breadcrumb li:not(:last-child)::after {
-  content: "/";
-  margin: 0 10px;
-  color: red;
-}
-
-.breadcrumb a {
-  color: white;
-  text-decoration: none;
-}
-
-.breadcrumb a:hover {
-  text-decoration: underline;
-}
-
-.breadcrumb li:last-child a {
-  pointer-events: none;
-}
+.breadcrumb-nav {
+    color: white;
+    font-family: Arial, sans-serif;
+  }
+  .breadcrumb-item {
+    color: white;
+    text-decoration: none;
+  }
+  .breadcrumb-item:hover {
+    text-decoration: underline;
+  }
