--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.bunny.net/css?family=nunito:300,400,600,700');
 
+:root {
+--text-color: #00FFFF;
+--link-color: #FFFF5A;
+--bg-color: black;
+}
+
 body {
 padding: 0px 0px 0px 0px;
 margin: 0px 0px 0px 0px;
-background-color: black;
-color: white;
+background-color: var(--bg-color);
+color: var(text-color);
 line-height: 1.3;
 font-family: 'Nunito', sans-serif;
 font-size: 18px;
@@ -27,7 +33,7 @@ border: 1px solid white !important;
 }
 
 a {
-color: #00FFFF;
+color: var(--link-color);
 text-decoration: none;
 }
 
