--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
 padding: 0px 0px 0px 0px;
 margin: 0px 0px 0px 0px;
 background-color: var(--bg-color);
-color: var(text-color);
+color: var(--text-color);
 line-height: 1.3;
 font-family: 'Nunito', sans-serif;
 font-size: 18px;
